[tool.poetry]
name = "talink"
version = "0.1.0"
description = "A fast URL shortener with simplicity in mind."
authors = ["Hendra Manudinata <manoedinata@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
